Finished the contact Section

--- a/index.html
+++ b/index.html
@@ -62,113 +62,100 @@
         <br>
         <br>
     </section>
-    <Section id="projects" class="web">
+
+    <!-- Website Section -->
+    <Section id="projects" class="project">
         <h2 class="title">Websites</h2>
-         </div>
-         <div class="project">  
-            <h3>
-            <a href="https://dmoloney5.github.io/run-buddy/" target="_blank">Project 1</a>
+        </div>
+        <div class="project">
+            <h3>Project 1 - Run Buddy Website</h3>
             <div class="project-img">
-            <img src="Assets/images/Run Buddy.jpg" alt="Run Buddy Website"/>
-            </div>
-            <div class="project-text">
-                <p>Run Buddy Website</p> 
-            </div>
-        </div>
-         
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 2</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" alt="Coming Soon"/>
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-                
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 3</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 4</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 5</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 6</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 7</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 8</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 9</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
-            </div>
-            <div class="project">  
-                <h3>
-                <a href="./uc.html" target="_blank">Project 10</a>
-                <div class="project-img">
-                <img src="Assets/images/under-construction_sign.jpg" />
-                </div>
-                <div class="project-text">
-                    <p>Under Contruction</p> 
-                </div>
+                <p><a href="https://dmoloney5.github.io/run-buddy/" target="_blank">
+                        <img src="Assets/images/Run Buddy.jpg" alt="Run Buddy Website" />
+                    </a></p>
             </div>
         </div>
-       </section>
+        <div class="project">
+            <h3>Project 2 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 3 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 4 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 5 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 6 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 7 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 8 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 9 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h3>Project 10 - Under Contruction</h3>
+            <div class="project-img">
+                <p><a href="./uc.html" target="_blank">
+                        <img src="Assets/images/under-construction_sign.jpg" />
+                    </a></p>
+            </div>
+        </div>
+    </section>
 
     <article id="resume">
         <div class="pdf">
@@ -176,6 +163,49 @@
             <iframe src="./Assets/DennisP._Moloney_Resume.pdf"></iframe>
         </div>
     </article>
+
+    <!-- Contact Section -->
+
+    <section id="contact">
+        <h2 class="title">Contact</h2>
+        <div class="info">
+            <div class="info-img">
+                <p><a href="mailto:dmoloney5@gmail.com">
+                        <img src="Assets/images/email.jpg" />
+                    </a></p>
+                <div class="info-text">
+                    <h3>Email Me</h3>
+                </div>
+            </div>
+
+            <div class="info-img">
+                <p><a href="tel:1-732-904-5732">
+                        <img src="Assets/images/cell phone.jpg" />
+                    </a></p>
+                <div class="info-text">
+                    <h3>Call Me</h3>
+                    <span>Display Phone Number</span>
+                    <div>1-732-904-5732</div>
+                </div>
+            </div>
+
+            <div class="info-img">
+                <p><a href="HTTPS://www.linkedin.com/in/dennismoloney" target="_blank">
+                        <img src="Assets/images/Linkedin-logo.jpg" />
+                    </a></p>
+                <div class="info-text">
+                    <h3><span>Linkedin</span></h3>
+                </div>
+            </div>
+      </div>
+    </section>
+    <footer>
+        <h2>Made with by Dennis Moloney</h2>
+        <br>
+    <div>
+        &copy; 2021 DM Production, Inc.
+    </div>
+    </footer>    
 
 
 
