--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dennis Moloney Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
 </head>
 
 <body>
     <!-- Navigation -->
     <header>
         <h1>
-            <a href="./index.html"><span>&home;</span>Dennis Moloney's Portfolio Website</a>
+            <a href="./index.html">Dennis Moloney's Portfolio Website</a>
         </h1>
         <nav>
             <ul>
@@ -209,6 +209,7 @@
         </section>
 
     <!-- Start of the Footer Section -->
+
     <footer>
         <h4>Created by Dennis Moloney</h4>
     <div>
