--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3>Project 2 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction" />
                     </a></p>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <h3>Project 3 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <h3>Project 4 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -104,7 +104,7 @@
             <h3>Project 5 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -113,7 +113,7 @@
             <h3>Project 6 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -122,7 +122,7 @@
             <h3>Project 7 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <h3>Project 8 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -140,7 +140,7 @@
             <h3>Project 9 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -149,7 +149,7 @@
             <h3>Project 10 - Under Contruction</h3>
             <div class="project-img">
                 <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" />
+                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
         </div>
@@ -182,7 +182,7 @@
                 <h3>Email Me</h3>
                 <div class="info-img">
                          <p><a href="mailto:dmoloney5@gmail.com">
-                        <img src="Assets/images/email.jpg" />
+                        <img src="Assets/images/email.jpg" alt="how to email me"/>
                     </a></p>
                     </div>
             </article>
@@ -191,7 +191,7 @@
                 <h3>Call Me</h3>
                 <div class="info-img">
                 <p><a href="tel:1-732-904-5732">
-                        <img src="Assets/images/cell phone.jpg" />
+                        <img src="Assets/images/cell phone.jpg" alt="How to call me"/>
                     </a></p>
                     </div>
             </article>
@@ -201,7 +201,7 @@
                 <h3>Linkedin</h3>
                 <div class="info-img">
              <p><a href="HTTPS://www.linkedin.com/in/dennismoloney" target="_blank">
-               <img src="Assets/images/Linkedin-logo.jpg" />
+               <img src="Assets/images/Linkedin-logo.jpg" alt="Visit my Linkedin page"/>
                  </a></p>
                  </div>
             </article>
