added homework websites to profile

--- a/index.html
+++ b/index.html
@@ -67,35 +67,35 @@
         </div>
         <div class="project">
             <h3>Project 1 - Run Buddy Website</h3>
-            <div class="project-img1">
+            <div class="project-img">
                 <p><a href="https://dmoloney5.github.io/run-buddy/" target="_blank">
                         <img src="Assets/images/Run Buddy.jpg" alt="Run Buddy Website" />
                     </a></p>
             </div>
         </div>
         <div class="project">
-            <h3>Project 2 - Under Contruction</h3>
+            <h3>Project 2 - Password Generator</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction" />
+                <p><a href="https://dmoloney5.github.io/RUT-Password-WEEK3/" target="_blank">
+                        <img src="Assets/images/Password_Generator.jpg" alt="Generate Passwords" />
                     </a></p>
             </div>
         </div>
 
         <div class="project">
-            <h3>Project 3 - Under Contruction</h3>
+            <h3>Project 3 - Javascript Quiz</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
+                <p><a href="https://dmoloney5.github.io/RUT-WEEK4-Quiz/" target="_blank">
+                        <img src="Assets/images/Quick-Quiz.jpg" alt="Test your Knowledge of javascript"/>
                     </a></p>
             </div>
         </div>
 
         <div class="project">
-            <h3>Project 4 - Under Contruction</h3>
+            <h3>Project 4 - Weather Calendar</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
+                <p><a href="https://dmoloney5.github.io/RUT-Week6-Weather/" target="_blank">
+                        <img src="Assets/images/06-server-side-apis-homework-demo.png" alt="Find out the weather in your city"/>
                     </a></p>
             </div>
         </div>
@@ -158,7 +158,11 @@
     <article id="resume">
         <div class="pdf">
             <h2 class="title">Resume</h2>
-            <iframe src="./Assets/DennisP._Moloney_Resume.pdf"></iframe>
+            <iframe src="./Assets/DennisP._Moloney_Resume.pdf"
+            style="border:0;" 
+            allowfullscreen=""
+            loading="lazy">
+        </iframe>
         </div>
     </article>
 
