added group project to website list

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                 worked closely with the development team and had interest in learning web design.
                 I'm currently in Rutgers University learning to become a Full Stack Web Developer. Below you will find
                 the project I've worked on. This website is my first front end website I coded.
+
+                In the first 8 weeks of the Rutgers BootCamp I learned how to use html,css, and javascript to build a website.  
+                I also learn to use API, and client-side API  Also how to store hitory and other data to local storage.  Below under website
+                project 1-5 are different websited I built in the front-end development course.
             </p>
         </section>
 
@@ -92,19 +96,19 @@
         </div>
 
         <div class="project">
-            <h3>Project 4 - Weather Calendar</h3>
+            <h3>Project 4 - Taskinator</h3>
             <div class="project-img">
-                <p><a href="https://dmoloney5.github.io/RUT-Week6-Weather/" target="_blank">
-                        <img src="Assets/images/06-server-side-apis-homework-demo.png" alt="Find out the weather in your city"/>
+                <p><a href="https://dmoloney5.github.io/Taskniator/" target="_blank">
+                        <img src="Assets/images/Taskinator.jpg" alt="Create a Kanban board"/>
                     </a></p>
             </div>
         </div>
 
         <div class="project">
-            <h3>Project 5 - Under Contruction</h3>
+            <h3>Project 5 - Chuck-N-Go - Group Project</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
+                <p><a href="https://ang543.github.io/chuck-n-go/" target="_blank">
+                        <img src="Assets/images/ChucknGo-screenshot.jpg" alt="Mapping app with Chuck Norris Jokes"/>
                     </a></p>
             </div>
         </div>
