update profile page

--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
         </div>
 
         <div class="project">
-            <h3>Project 6 - Under Contruction</h3>
+            <h3>Project 6 - Developer Blog</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
+                <p><a href="https://rut-developer-blog.herokuapp.com/" target="blog">
+                        <img src="Assets/images/Developer's Blog.jpg" alt="My Blog"/>
                     </a></p>
             </div>
         </div>
 
         <div class="project">
-            <h3>Project 7 - Under Contruction</h3>
+            <h3>Project 7 - A to B - Group Project 2</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
+                <p><a href="https://a-to-b-cars-rut-proj2.herokuapp.com/homepage" target="Project 2">
+                        <img src="Assets/images/homepage.jpg" alt="car app"/>
                     </a></p>
             </div>
         </div>
