--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         </div>
 
         <div class="project">
-            <h3>Project 8 - Under Contruction</h3>
+            <h3>Project 8 - Pizza-Hunt</h3>
             <div class="project-img">
-                <p><a href="./uc.html" target="_blank">
+                <p><a href="https://pizza-hunt-rut.herokuapp.com/" target="the pizza blog">
                         <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
                     </a></p>
             </div>
