--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h3>Project 8 - Pizza-Hunt</h3>
             <div class="project-img">
                 <p><a href="https://pizza-hunt-rut.herokuapp.com/" target="the pizza blog">
-                        <img src="Assets/images/under-construction_sign.jpg" alt="Currently Under Construction"/>
+                        <img src="Assets/images/Pizza Hunt.png" alt="the pizza blog"/>
                     </a></p>
             </div>
         </div>
